erDiagram
    ORGANIZATION ||--o{ WORKSPACE : "contains"
    ORGANIZATION ||--o| SUBSCRIPTION : "subscribed to"
    WORKSPACE ||--o{ MEMBER : "employs"
    WORKSPACE ||--o{ PROJECT : "hosts"
    WORKSPACE ||--o{ AUDIT_LOG : "audits"
    WORKSPACE ||--o{ WEBHOOK_EVENT : "receives"
    WORKSPACE ||--o| CREDIT : "holds"
    USER ||--o{ MEMBER : "joined as"
    USER ||--o{ SESSION : "starts"
    USER ||--o{ ACCOUNT : "links"
    MEMBER ||--o{ NOTIFICATION : "receives"
    PROJECT ||--o| REPOSITORY : "connects"
    PROJECT ||--o{ FEATURE : "tracks"
    FEATURE ||--o{ CLARIFICATION_QUESTION : "requires"
    CLARIFICATION_QUESTION ||--o| CLARIFICATION_ANSWER : "resolved by"
    FEATURE ||--o| PRD : "generates"
    PRD ||--o{ TASK : "decomposes"
    TASK ||--o| PULL_REQUEST : "fixes"
    PULL_REQUEST ||--o{ REVIEW : "audited by"
    REVIEW ||--o{ REVIEW_COMMENT : "comments"
    PULL_REQUEST ||--o| DEPLOYMENT : "deploys"
    PROJECT ||--o{ RELEASE : "publishes"
    AGENT_RUN ||--o{ AGENT_LOG : "logs"
    AGENT_RUN ||--o{ TOKEN_USAGE : "consumes"
    AGENT_RUN ||--o| CONTEXT_SNAPSHOT : "captures"
